force-app/main/default/objects/Project_Resource__c/Project_Resource__c.object-meta.xml
<CustomObject>
    <description>Created by: RG
Business unit: Design for BLDG
Purpose: To track project resources products/inventory</description>
    <label>Project Resource</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>