force-app/main/default/objects/Project_Resource__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Created By: RG 
Business Unit: BLDG - Design 
Purpose: Master-Detail for project &amp; project resource
Populated: Manually</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>