force-app/main/default/objects/Project_Resource__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Created By: RG
Business Unit: BLDG - Design
Purpose: Amount for project resources
Populated: Manually, potential to change</description>
    <inlineHelpText>Number Amount Ordered</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>