force-app/main/default/objects/Project_Resource__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Created By: RG
Business Unit: BLDG - Design
Purpose: Price for unit of project resource
Populated: Manually, potential to change</description>
    <inlineHelpText>Price amount for single resource unit</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>