force-app/main/default/objects/Project_Resource__c/listViews/BLDG_Project_Resources.listView-meta.xml
<ListView>
    <fullName>BLDG_Project_Resources</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>BLDG - Project Resources</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>